A few small changes to pathplanner integration, some organizational changes to pathplanner routines, and converted some values into constants - Luca

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,8 +2,16 @@
   "robotWidth": 0.6604,
   "robotLength": 0.6604,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "CenterAutonPaths",
+    "LeftAutonPaths",
+    "RightAutonPaths"
+  ],
+  "autoFolders": [
+    "CenterAutos",
+    "LeftAutos",
+    "RightAutos"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
