Fixed a problem that caused us to have to develope auto routines in pathplanner from the opposite side of the field (field oreintation on the red side gets flipped right now but a fix is in progress) and did a bunch of tests with autonomous, currently trying to fix a problem that prevents the robot from moving in the direction opposite to whatever direction it first starts moving in - Luca, Renier

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,15 +3,23 @@
   "robotLength": 0.66,
   "holonomicMode": true,
   "pathFolders": [
-    "CenterAutonPaths",
+    "AmpB",
+    "AmpR",
     "AmpSideAutonPaths",
-    "SourceSideAutonPaths",
-    "TestPaths"
+    "CenterAutonPaths",
+    "CenterB",
+    "CenterR",
+    "SourceB",
+    "SourceR",
+    "SourceSideAutonPaths"
   ],
   "autoFolders": [
-    "MovingAutos",
-    "TestAutos",
-    "SittingAutos"
+    "AmpB",
+    "AmpR",
+    "CenterB",
+    "CenterR",
+    "SourceB",
+    "SourceR"
   ],
   "defaultMaxVel": 1.0,
   "defaultMaxAccel": 2.0,
