made seperate system configs for beta and alpha robots, made subsystem and commands for the new deflector mechanism (need to set the deflector motor encoder to ID 33 and test the code), and shifted some controller inputs so that precision drive could be assigned to a trigger - Luca

--- a/src/main/deploy/betasystemconfig.json
+++ b/src/main/deploy/betasystemconfig.json
@@ -1,7 +1,8 @@
 {
-    "activeLift": false,
+    "activeHanger": false,
     "activeIntake": true,
     "activeShooter": true,
+    "activeDeflector": true,
     "activeLights": true,
     "activeVision": false
 }
