Tested the deflector and got it working with ranges, and got the lift mechanism working

--- a/src/main/deploy/betasystemconfig.json
+++ b/src/main/deploy/betasystemconfig.json
@@ -1,5 +1,5 @@
 {
-    "activeHanger": false,
+    "activeHanger": true,
     "activeIntake": true,
     "activeShooter": true,
     "activeDeflector": true,
