changed precision drive to be scaled by 0.7 rather than 0.9, increased intake feed speed, changed some light patterns, made code to prevent shooter spinup commands from cancelling shoot commands (needs more work), worked on cleaning up the shuffleboard by implementing a debug mode that shows more information when true and only minimal information when false, and added a delay before retracting the deflector, and moved the gyro rest to the start button - Luca, Ayden, Ranier

--- a/src/main/deploy/alphasystemconfig.json
+++ b/src/main/deploy/alphasystemconfig.json
@@ -4,5 +4,6 @@
     "activeShooter": false,
     "activeDeflector": false,
     "activeLights": false,
-    "activeVision": false
+    "activeVision": false,
+    "activeDriveCam": false
 }
