--- a/src/main/deploy/betasystemconfig.json
+++ b/src/main/deploy/betasystemconfig.json
@@ -4,5 +4,6 @@
     "activeShooter": true,
     "activeDeflector": true,
     "activeLights": true,
-    "activeVision": false
+    "activeVision": false,
+    "activeDriveCam": true
 }
