Coverted vision code to incorporate two cameras instead of one

--- a/src/main/deploy/betasystemconfig.json
+++ b/src/main/deploy/betasystemconfig.json
@@ -4,6 +4,6 @@
     "activeShooter": true,
     "activeDeflector": true,
     "activeLights": true,
-    "activeVision": false,
+    "activeVision": true,
     "activeDriveCam": true
 }
