added demo mode into the configs file that reduces the drive speed - Luca, Ayden, Katie

--- a/src/main/deploy/betasystemconfig.json
+++ b/src/main/deploy/betasystemconfig.json
@@ -5,5 +5,6 @@
     "activeDeflector": true,
     "activeLights": true,
     "activeVision": false,
-    "activeDriveCam": true
+    "activeDriveCam": true,
+    "demoMode": true
 }
