--- a/src/main/deploy/alphasystemconfig.json
+++ b/src/main/deploy/alphasystemconfig.json
@@ -5,5 +5,6 @@
     "activeDeflector": false,
     "activeLights": false,
     "activeVision": false,
-    "activeDriveCam": false
+    "activeDriveCam": false,
+    "demoMode": false
 }
